Working on Java 9 compat